# finetune-llms

./: .editorconfig  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
continued_pretraining/: cpt.py
plans/: obligation_extraction.md
scripts/: continued_pretraining.py  create_annotations.py  data_preparation.ipynb  dataset.py  inference.py  inference_runpod.py  inference_vllm.py  train_peft.py
src/: custom_dataset.py
src/finetune_llms/: annotation.py  custom_dataset.py  custom_evaluator.py  evaluation_questions.py  model_utils.py  ollama_client.py  utils.py
src/finetune_llms/clients/: base_client.py  ollama_client.py  runpod_client.py
src/finetune_llms/eval_data/: legalbench-abercrombie-100samples.json
