[project]
name = "finetune-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "trl==0.19.1",
    "unsloth>=2025.7.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
