[project]
name = "finetune-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.31",
    "datasets>=4.0.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "trl==0.19.1",
    #"unsloth>=2025.7.2",
    "wandb>=0.21.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finetune_llms"]

