[project]
name = "finetune-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.31",
    "datasets>=3.6.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "runpod>=1.7.13",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "trl==0.19.1",
    "unsloth>=2025.10.10",
    "unsloth_zoo>=2025.10.12",
    "wandb>=0.21.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finetune_llms"]

